# openvins-dev

./: .gitignore
config/dl_engine/: config.yaml
config/euroc_mav/: estimator_config.yaml
config/tartanair_sim/: estimator_config.yaml  kalibr_imucam_chain.yaml
ov_core/: CMakeLists.txt  package.xml
ov_core/cmake/: ROS1_Nvidia.cmake
ov_core/src/: test_tracking.cpp  test_tracking_dl.cpp
ov_data/sim/tartanair/: pose_gt.txt
ov_msckf/cmake/: ROS1.cmake
ov_msckf/launch/: serial.launch  serial_tartanair.launch  sim_tartanair.launch  simulation.launch
ov_msckf/scripts/: run_sim_tartanair.sh
ov_msckf/src/: ros1_serial_msckf_dev.cpp  run_simulation.cpp
ov_msckf/src/core/: VioManagerOptions.h
ov_superpoint/: CMakeLists.txt  inference_image.cpp  package.xml
ov_superpoint/python/: convert_int32.py  convert_superglue_to_onnx.py  convert_superpoint_to_onnx.py  notes  requirements.txt  sinkhorn_knopp.py
ov_superpoint/src/: super_glue.h  super_point.cpp  super_point.h
python/: run_estimator.py  tartan_openvins_sim.py
python/TartanAIR/: loader.py  tartan_azure_downloader.py
zed/: CMakeLists.txt
zed/examples/: zed_oc_recorder.cpp  zed_oc_sync_example.cpp
