<?xml version="1.0"?>
<package format="3">

    <!-- Package Information -->
    <name>ov_superpoint</name>
    <version>0.0.1</version>
    <description>
        Core algorithms for deep-visual-inertial navigation algorithms.
    </description>

    <author email="Hoang.C.Quach@student.uts.edu.au">Quach Cong Hoang</author>
    <maintainer email="Hoang.C.Quach@student.uts.edu.au">Quach Cong Hoang</maintainer>

    <!-- Licensing -->
    <license>GNU General Public License v3.0</license>

    <!-- ROS1: Dependencies needed to compile this package. -->
    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <depend condition="$ROS_VERSION == 1">cmake_modules</depend>
    <depend condition="$ROS_VERSION == 1">roscpp</depend>
    <depend condition="$ROS_VERSION == 1">rosbag</depend>
    <depend condition="$ROS_VERSION == 1">sensor_msgs</depend>
    <depend condition="$ROS_VERSION == 1">cv_bridge</depend>

    <!-- System dependencies for both versions -->
    <depend>eigen</depend>
    <depend>libopencv-dev</depend>
    <depend>libopencv-contrib-dev</depend>
    <depend>boost</depend>

    <!-- Note the export is required to expose the executables -->
    <export>
        <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    </export>


</package>